tests/core/snapshots/batching-group-by-default.md_0.snap
---
source: tests/core/spec.rs
expression: response
snapshot_kind: text
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "id": 1
          },
          "userId": 1
        },
        {
          "user": {
            "id": 2
          },
          "userId": 2
        }
      ]
    }
  }
}
