tests/core/snapshots/batching-group-by-default.md_client.snap
---
source: tests/core/spec.rs
expression: client
---
scalar BigInt

scalar Bytes

scalar Date

scalar Email

scalar Empty

scalar JSON

scalar PhoneNumber

type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int!
}

type Query {
  posts: [Post]
}

scalar UnsignedInt

scalar Url

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
