tests/core/snapshots/batching-group-by-optional-key-without-batch-setting.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Post {
  body: String
  id: Int
  title: String
  user: User
  userId: Int
}

type Query {
  posts: [Post]
}

type User {
  id: Int
  name: String
}

schema {
  query: Query
}
