tests/core/snapshots/batching-group-by-optional-key.md_0.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "posts": [
        {
          "user": {
            "id": 1
          },
          "userId": 1
        },
        {
          "user": null,
          "userId": null
        }
      ]
    }
  }
}
