tests/core/snapshots/batching-group-by-optional-key.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000, queryValidation: false)
  @upstream(
    baseURL: "http://jsonplaceholder.typicode.com"
    batch: {delay: 1, headers: [], maxSize: 1000}
    httpCache: 42
  ) {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
    @http(
      batchPath: ["id"]
      path: "/users"
      query: [{key: "id", value: "{{.value.userId}}"}, {key: "foo", value: "bar"}]
    )
  userId: Int
}

type Query {
  posts: [Post] @http(path: "/posts?id=11&id=3&foo=1")
}

type User {
  id: Int
  name: String
}
