tests/core/snapshots/batching-group-by-without-batch-setting.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000, queryValidation: false) @upstream {
  query: Query
}

type Post {
  body: String
  id: Int
  title: String
  user: User
    @http(
      url: "http://jsonplaceholder.typicode.com/users"
      batchKey: ["id"]
      query: [{key: "id", value: "{{.value.userId}}"}, {key: "foo", value: "bar"}]
    )
  userId: Int!
}

type Query {
  posts: [Post] @http(url: "http://jsonplaceholder.typicode.com/posts?id=11&id=3&foo=1")
}

type User {
  id: Int
  name: String
}
